Fix footer font size and midsection margin spacing

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ a {
 /* SECTION TWO */
 
 #projects {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   z-index: 1;
@@ -194,6 +194,7 @@ a {
   text-align: center;
   padding-right: 1rem;
   padding-left: 1rem;
+  margin-bottom: 1rem;
 }
 
 .project-pic-one:hover,
@@ -271,6 +272,7 @@ footer {
   position: fixed;
   bottom: 0%;
   z-index: 2;
+  font-size: 0.85rem;
 }
 
 /*! MEDIA QUERY TO POSITION CVA LOGO IN SMALLER SCREENS */
@@ -296,7 +298,7 @@ footer {
     left: 10px;
     top: 5px;
     width: 5px;
-    z-index: 3;
+    z-index: 1;
   }
 
   .second-letter {
@@ -304,7 +306,7 @@ footer {
     left: 40px;
     top: 5px;
     width: 5px;
-    z-index: 3;
+    z-index: 1;
   }
 
   .third-letter {
@@ -312,7 +314,7 @@ footer {
     width: 5px;
     left: 70px;
     top: 5px;
-    z-index: 3;
+    z-index: 1;
   }
 }
 
@@ -338,20 +340,17 @@ footer {
 .scroller > span {
   position: relative;
   top: 0;
-  animation: slide 5s infinite;
+  animation: slide 3s infinite alternate;
   font-weight: bold;
 }
 @keyframes slide {
   0% {
     top: 0;
   }
-  25% {
+  50% {
     top: -1.2em;
   }
-  50% {
-    top: -2.4em;
-  }
-  75% {
-    top: -3.6em;
+  100% {
+    top: -2.5em;
   }
 }
